<resources>
    <string name="app_name">Assignment1</string>

    <string name="hello_world">This is a simple reaction timer and gameshow buzzer application.</string>
    <string name="hello_world2">This is introduction.</string>
    <string name="action_settings">Settings</string>
    <string name="single_user_string">single-user mode</string>
    <string name="gameshow_string">gameshow buzzer mode</string>
    <string name="stat_string">statistics</string>
    <string name="title_activity_single_mode_intro">SingleModeIntroActivity</string>
    <string name="start_timer_string">start timer</string>
    <string name="title_activity_buzzer">BuzzerActivity</string>
    <string name="player_number_string">how many players do you have?</string>
    <string name="title_activity_single_mode">SingleModeActivity</string>
    <string name="react_string">start</string>
    <string name="two_player_string">2 player</string>
    <string name="three_pl_str">3 player</string>
    <string name="four_pl_str">4 player</string>
    <string name="title_activity_two_player">TwoPlayer</string>
    <string name="playeronestr">player1</string>
    <string name="playertwostr">player2</string>
    <string name="title_activity_three_player">ThreePlayer</string>
    <string name="playerone_str">player1</string>
    <string name="playertwo_str">player2</string>
    <string name="playerthree_str">player3</string>
    <string name="title_activity_four_player">FourPlayer</string>
    <string name="player2_str">player2</string>
    <string name="player3_str">player3</string>
    <string name="player4_str">player4</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="clear_string">clear</string>
    <string name="send_email_str">Send email</string>
    <string name="player1_str">player1</string>

</resources>
