<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.bq.assignment1.FourPlayer">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7" />

    <Button
        android:layout_width="165dp"
        android:layout_height="155dp"
        android:text="@string/player2_str"
        android:id="@+id/playertwo"
        android:onClick="twoPress"
        android:layout_alignTop="@+id/playerone"
        android:layout_toEndOf="@+id/playerthree" />

    <Button
        android:layout_width="165dp"
        android:layout_height="155dp"
        android:text="@string/player3_str"
        android:id="@+id/playerthree"
        android:onClick="threePress"
        android:layout_alignTop="@+id/playerfour"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="165dp"
        android:layout_height="155dp"
        android:text="@string/player4_str"
        android:id="@+id/playerfour"
        android:onClick="fourPress"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/playertwo" />

    <Button
        android:layout_width="165dp"
        android:layout_height="155dp"
        android:text="@string/player1_str"
        android:id="@+id/playerone"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/playertwo"
        android:onClick="onePress" />

</RelativeLayout>
