<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.bq.assignment1.ThreePlayer">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6" />

    <Button
        android:layout_width="330dp"
        android:layout_height="135dp"
        android:text="@string/playerone_str"
        android:id="@+id/playerone"
        android:onClick="onePress"
        android:layout_above="@+id/playertwo"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="330dp"
        android:layout_height="135dp"
        android:text="@string/playertwo_str"
        android:id="@+id/playertwo"
        android:onClick="twoPress"
        android:layout_above="@+id/playerthree"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="330dp"
        android:layout_height="135dp"
        android:text="@string/playerthree_str"
        android:id="@+id/playerthree"
        android:onClick="threePress"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
