<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="40sp"
        android:textColor="#ff703a" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_user_string"
        android:id="@+id/button"
        android:layout_above="@+id/gameshow_buzzer"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="singleModeIntro" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameshow_string"
        android:id="@+id/gameshow_buzzer"
        android:layout_above="@+id/stat"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="buzzerMode" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat_string"
        android:id="@+id/stat"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/gameshow_buzzer" />

</RelativeLayout>
