<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.bq.assignment1.TwoPlayer">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5" />

    <Button
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:text="@string/playeronestr"
        android:id="@+id/playerone"
        android:layout_above="@+id/playertwo"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:text="@string/playertwostr"
        android:id="@+id/playertwo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
