<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.bq.assignment1.Statistics">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/screen_text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_string"
        android:id="@+id/clear"
        android:onClick="clear"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/screen_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email_str"
        android:id="@+id/send_email"
        android:layout_above="@+id/clear"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/clear"
        android:onClick="sendEmail" />

</RelativeLayout>
